syntax = "proto3";

package taskprotobuf;
option go_package = "taskpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Task describe todo task
message Task {
  // Unique task identifier
  string id = 1;
  // title of the task
  string title = 2;
  // details description of the task
  string desc = 3;
  // remind time for todo task
  google.protobuf.Timestamp reminder = 4;
}

message CreateRequest {
  string title = 1;
  string desc = 2;
  google.protobuf.Timestamp remainder = 3;
}

message CreateResponse { string id = 1; }

message ReadRequest { string id = 1; }

message ReadResponse { Task task = 1; }

message UpdateRequest { Task task = 1; }

message UpdateResponse { string id = 1; }

message DeleteRequest { int64 id = 1; }

message DeleteResponse { string id = 1; }

message ReadAllResponse { repeated Task task = 1; }

service TaskService {
  // Create creates new todo task
  rpc Create(CreateRequest) returns (CreateResponse);
  // Read todo task
  rpc Read(ReadRequest) returns (ReadResponse);
  // Update todo task
  rpc Update(UpdateRequest) returns (UpdateResponse);
  // Delete todo task
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  // Read all todo tasks
  rpc ReadAll(google.protobuf.Empty) returns (ReadAllResponse);
}